--- a/MyPropCo/package.json
+++ b/MyPropCo/package.json
@@ -16,7 +16,9 @@
     "@mui/material": "^5.15.10",
     "@mui/styled-engine-sc": "^6.0.0-alpha.16",
     "@react-spring/web": "^9.7.3",
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-material-ui-carousel": "^3.4.2",
     "styled-components": "^6.1.8"
